Apply and push all pending changes

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -24,6 +24,16 @@ bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Goo
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
+# Unbind conflicting keys first
+unbind = SUPER, J
+unbind = SUPER, K
+
+# Focus movement with vim keys
+bindd = SUPER, H, Move focus left, movefocus, l
+bindd = SUPER, J, Move focus down, movefocus, d
+bindd = SUPER, K, Move focus up, movefocus, u
+bindd = SUPER, L, Move focus right, movefocus, r
+
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
