--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -6,7 +6,6 @@ bindd = SUPER, T, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-t
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
@@ -28,11 +27,12 @@ bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compo
 unbind = SUPER, J
 unbind = SUPER, K
 
-# Focus movement with vim keys
+# Movement with vim keys
 bindd = SUPER, H, Move focus left, movefocus, l
 bindd = SUPER, J, Move focus down, movefocus, d
 bindd = SUPER, K, Move focus up, movefocus, u
 bindd = SUPER, L, Move focus right, movefocus, r
+bindd = SUPER, M, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
