--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -3,7 +3,6 @@ $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
 bindd = SUPER, T, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
@@ -33,6 +32,7 @@ bindd = SUPER, J, Move focus down, movefocus, d
 bindd = SUPER, K, Move focus up, movefocus, u
 bindd = SUPER, L, Move focus right, movefocus, r
 bindd = SUPER, M, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
+bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
