--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -31,6 +31,12 @@ bindd = SUPER, H, Move focus left, movefocus, l
 bindd = SUPER, J, Move focus down, movefocus, d
 bindd = SUPER, K, Move focus up, movefocus, u
 bindd = SUPER, L, Move focus right, movefocus, r
+
+# Move windows with vim keys
+bindd = SUPER SHIFT, H, Move window left, movewindow, l
+bindd = SUPER SHIFT, J, Move window down, movewindow, d
+bindd = SUPER SHIFT, K, Move window up, movewindow, u
+bindd = SUPER SHIFT, L, Move window right, movewindow, r
 bindd = SUPER, M, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
 bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
 
