Move workspace-to-monitor keybind from SUPER+M to SUPER+N, remove editor keybind

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -5,7 +5,6 @@ $browser = omarchy-launch-browser
 bindd = SUPER, T, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
@@ -37,7 +36,7 @@ bindd = SUPER SHIFT, H, Move window left, movewindow, l
 bindd = SUPER SHIFT, J, Move window down, movewindow, d
 bindd = SUPER SHIFT, K, Move window up, movewindow, u
 bindd = SUPER SHIFT, L, Move window right, movewindow, r
-bindd = SUPER, M, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
+bindd = SUPER, N, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
 bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
