--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -25,6 +25,11 @@ bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compo
 unbind = SUPER, J
 unbind = SUPER, K
 
+# Unbind default screenshot keys
+unbind = , PRINT
+unbind = SHIFT, PRINT
+unbind = CTRL, PRINT
+
 # Movement with vim keys
 bindd = SUPER, H, Move focus left, movefocus, l
 bindd = SUPER, J, Move focus down, movefocus, d
@@ -38,6 +43,9 @@ bindd = SUPER SHIFT, K, Move window up, movewindow, u
 bindd = SUPER SHIFT, L, Move window right, movewindow, r
 bindd = SUPER, N, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
 bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
+bindd = SUPER, S, Screenshot of region, exec, omarchy-cmd-screenshot
+bindd = SUPER SHIFT, S, Screenshot of window, exec, omarchy-cmd-screenshot window
+bindd = SUPER SHIFT CTRL, S, Screenshot of display, exec, omarchy-cmd-screenshot output
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
