Add repeatable vim-style tmux pane resize keybinds

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -31,6 +31,12 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Vim like keybindings for resizing panes
+bind-key -r C-h resize-pane -L 5
+bind-key -r C-l resize-pane -R 5
+bind-key -r C-k resize-pane -U 5
+bind-key -r C-j resize-pane -D 5
+
 # Vim like keybindings in copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
