Add tmux binding for even-horizontal layout

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -47,3 +47,6 @@ bind-key P switch-client -p
 
 # Bind zooming into a pane to prefix + f
 bind-key f resize-pane -Z
+
+# Evenly distribute panes horizontally with prefix + =
+bind-key = select-layout even-horizontal
