--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -50,3 +50,17 @@ bind-key f resize-pane -Z
 
 # Evenly distribute panes horizontally with prefix + =
 bind-key = select-layout even-horizontal
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Auto-restore tmux sessions on boot
+set -g @continuum-restore 'on'
+
+# Auto-save interval (default is 15 minutes)
+set -g @continuum-save-interval '15'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom)
+run '~/.config/tmux/plugins/tpm/tpm'
