Add tmux-resurrect process restoration for dev, ngrok, and claude

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -62,5 +62,8 @@ set -g @continuum-restore 'on'
 # Auto-save interval (default is 15 minutes)
 set -g @continuum-save-interval '15'
 
+# Restore additional programs (~ means restore with all command arguments)
+set -g @resurrect-processes '"~dev" "~ngrok" "~claude"'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom)
 run '~/.config/tmux/plugins/tpm/tpm'
