Remove bin/dev from tmux resurrectable processes (doesn't work)

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -63,7 +63,7 @@ set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
 
 # Restore additional programs (~ means restore with all command arguments)
-set -g @resurrect-processes '"~bin/dev" "~ngrok" "~claude"'
+set -g @resurrect-processes '"~ngrok" "~claude"'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom)
 run '~/.config/tmux/plugins/tpm/tpm'
