--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -39,7 +39,7 @@ bind-key -r C-j resize-pane -D 5
 
 # Vim like keybindings in copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Switch to next/previous session with Shift+N/Shift+P
 bind-key N switch-client -n
