--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -12,6 +12,9 @@ input {
   # Start with numlock on by default
   numlock_by_default = true
 
+  # Remove default CapsLock keybind
+  kb_options = caps:none
+
   # Increase sensitity for mouse/trackpack (default: 0)
   # sensitivity = 0.35
 
