--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -2,24 +2,22 @@
 $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
+unbind = SUPER, T
 bindd = SUPER, T, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
-bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+
+# Utils
+bindd = SUPER SHIFT, V, Clipboard, exec, omarchy-launch-walker -m clipboard
+bindd = SUPER SHIFT, T, Toggle floating, togglefloating,
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, Claude, exec, omarchy-launch-webapp "https://claude.ai"
-bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
-bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 
 # Unbind conflicting keys first
 unbind = SUPER, J
@@ -33,6 +31,7 @@ unbind = , PRINT
 unbind = SHIFT, PRINT
 unbind = CTRL, PRINT
 
+# Set my own
 bindd = SUPER, S, Screenshot of region, exec, omarchy-cmd-screenshot
 bindd = SUPER SHIFT, S, Screenshot of window, exec, omarchy-cmd-screenshot window
 bindd = SUPER SHIFT CTRL, S, Screenshot of display, exec, omarchy-cmd-screenshot output
@@ -47,10 +46,9 @@ bindd = SUPER SHIFT, H, Move window left, movewindow, l
 bindd = SUPER SHIFT, J, Move window down, movewindow, d
 bindd = SUPER SHIFT, K, Move window up, movewindow, u
 bindd = SUPER SHIFT, L, Move window right, movewindow, r
-bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
 bindd = SUPER, N, Move workspace to next monitor, movecurrentworkspacetomonitor, +1
 bindd = SUPER, bracketleft, Focus previous workspace, workspace, previous
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+# unbind = SUPER SHIFT, SPACE
+# bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
