--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -16,7 +16,7 @@ bindd = SUPER SHIFT, T, Toggle floating, togglefloating,
 bindd = SUPER, A, Claude, exec, omarchy-launch-webapp "https://claude.ai"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://www.youtube.com/playlist?list=WL"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 
 # Unbind conflicting keys first
