tmux: create new windows adjacent to current window instead of at end

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -19,3 +19,6 @@ shell-integration-features = no-cursor
 
 # Keyboard bindings
 keybind = shift+enter=text:\x1b\r
+
+# Slowdown mouse scrolling
+mouse-scroll-multiplier = 0.95
