--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -3,7 +3,7 @@ $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
 unbind = SUPER, T
-bindd = SUPER, T, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, T, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
