--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -51,6 +51,9 @@ bind-key f resize-pane -Z
 # Evenly distribute panes horizontally with prefix + =
 bind-key = select-layout even-horizontal
 
+# Create new window adjacent to current one (instead of at end)
+bind-key c new-window -a
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
