--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -3,7 +3,7 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us
+  kb_layout = us,gr
 
   # Change speed of keyboard repeat
   repeat_rate = 50
@@ -12,8 +12,8 @@ input {
   # Start with numlock on by default
   numlock_by_default = true
 
-  # Remove default CapsLock keybind
-  kb_options = caps:none
+  # Remove default CapsLock keybind and enable layout switching with Alt+Shift
+  kb_options = caps:none,grp:alt_shift_toggle
 
   # Increase sensitity for mouse/trackpack (default: 0)
   # sensitivity = 0.35
